--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,2 +1,3 @@
-Size.password=메시징 소스 - 비밀번호는 {min}자 이상 {max}자 이하로 입력해 주세요.
-NotBlank=메시징 소스 - 공백을 입력할 수 없습니다.
+Size.password=비밀번호는 {min}자 이상 {max}자 이하로 입력해 주세요.
+NotBlank=공백을 입력할 수 없습니다.
+Range=최소값과 최대값 사이의 값을 입력해 주세요.
